--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.1",
     "primeicons": "^7.0.0",
+    "primevue": "^4.2.1",
     "vue": "^3.5.4",
     "vue-router": "^4.4.5"
   },
